name:                hsysadmin
version:             0.1
synopsis:            Useful tools for sys admins
description:         Useful tools for sys admins
category:            System
license:             BSD3
license-file:        LICENSE
author:              James Sanders
maintainer:          jimmyjazz14@gmail.com

build-depends:       base -any, 
		     regex-posix >= 0.94.1,
		     process >= 1.0.1.2,
		     filepath >= 1.1.0.3,
		     directory >= 1.0.1.0,
		     hfind >= 0.0.3, 
		     MissingH -any,
                     unix, 
                     old-locale, 
                     time

build-type:          Simple

executable:          renamex
main-is:             src/renamex/renamex.hs
ghc-options:         -O2 

executable:          chronos
main-is:             src/chronos/chronos.hs
ghc-options:         -O2

