name:                hsysadmin
version:             0.2.0
synopsis:            Useful tools for sys admins
description:         Useful tools for sys admins
category:            System
license:             BSD3
license-file:        LICENSE
author:              James Sanders
maintainer:          jimmyjazz14@gmail.com

build-depends:       MissingH -any,
		     directory >= 1.0.1.0,
		     filepath >= 1.1.0.3,
		     hfind >= 0.0.3, 
		     process >= 1.0.1.2,
		     regex-posix >= 0.94.1,
                     HTTP >= 0.9,  
                     containers >= 0.3.0.0, 
                     mtl >= 1.1.0.2, 
                     network >= 2.2.1.5, 
                     old-locale, 
                     tagsoup >= 0.8, 
                     time,
                     unix, 
                     base -any

build-type:          Simple

executable:          renamex
main-is:             src/renamex/renamex.hs
ghc-options:         -O2 

executable:          chronos
main-is:             src/chronos/chronos.hs
ghc-options:         -O2

executable:          creep-on
main-is:             src/creepy/creep-on.hs
ghc-options:         -O2

executable:          timejump
main-is:             src/timejump/timejump.hs
ghc-options:         -O2


